# selfies_analysis

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
selfies_analysis/: __init__.py  core.py  input_handler.py  metrics.py  metrics_calculator.py  plots.py  refactored_core.py  summary_reporter.py  visualizer.py
tests/: benchmark_test.py  performance_results.csv  quick_benchmark.py
